bk_ida/gccida/g1/emit_block_move
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2092:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2097:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2098:5: error: expected ';' after expression
tree v16; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2098:6: error: use of undeclared identifier 'v16'
tree v16; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2099:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2100:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2101:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2103:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2104:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2105:5: error: expected ';' after expression
tree v23; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2105:6: error: use of undeclared identifier 'v23'
tree v23; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2106:5: error: expected ';' after expression
tree v24; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2106:6: error: use of undeclared identifier 'v24'
tree v24; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2111:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2112:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v31; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2118:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/expr.c:2120:5: error: expected ';' after expression
tree v39; // rdi 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_block_move/src/obj/expr.o] Error 1
